Created Node in Dockerfile and docker-compose.yaml

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -48,6 +48,17 @@ services:
       - "6379:6379"
     networks:
       - laravel-chat-app
+
+  # Node Server
+  node:
+    container_name: node
+    build:
+      context: .
+      target: node
+    volumes:
+      - .:/usr/source
+      - ./node_modules:/usr/source/node_modules
+    tty: true
 networks:
   laravel-chat-app:
     name: laravel-chat-app
