--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,7 +22,7 @@ services:
     networks:
       - laravel-chat-app
 
-    # Database Server
+  # Database Server
   database:
     container_name: mysql
     image: mysql:8.0
@@ -46,6 +46,25 @@ services:
     command: redis-server --appendonly yes
     ports:
       - "6379:6379"
+    networks:
+      - laravel-chat-app
+
+  # Queue Server
+  queue:
+    container_name: queue
+    build:
+      context: .
+      target: php
+      args:
+        - APP_ENV=${APP_ENV}
+    environment:
+      - APP_ENV=${APP_ENV}
+      - CONTAINER_ROLE=queue
+    working_dir: /var/www
+    volumes:
+      - ./:/var/www
+    depends_on:
+      - php
     networks:
       - laravel-chat-app
 
