--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,27 @@ services:
     networks:
       - laravel-chat-app
 
+  # Websocket Service
+  websocket:
+    container_name: websocket
+    build:
+      context: .
+      target: php
+      args:
+        - APP_ENV=${APP_ENV}
+    environment:
+      - APP_ENV=${APP_ENV}
+      - CONTAINER_ROLE=websocket
+    working_dir: /var/www
+    volumes:
+      - ./:/var/www
+    ports:
+      - "6001:6001"
+    depends_on:
+      - queue
+    networks:
+      - laravel-chat-app
+
   # Database Server
   database:
     container_name: mysql
