Chat App completed

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,10 @@ services:
     environment:
       - APP_ENV=${APP_ENV}
       - CONTAINER_ROLE=app
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - REDIS_HOST=${REDIS_HOST}
+      - REDIS_PORT=${REDIS_PORT}
     working_dir: /var/www
     volumes:
       - ./:/var/www
@@ -33,6 +37,8 @@ services:
     environment:
       - APP_ENV=${APP_ENV}
       - CONTAINER_ROLE=websocket
+      - REDIS_HOST=${REDIS_HOST}
+      - REDIS_PORT=${REDIS_PORT}
     working_dir: /var/www
     volumes:
       - ./:/var/www
@@ -40,6 +46,9 @@ services:
       - "6001:6001"
     depends_on:
       - queue
+      - php
+      - database
+      - redis
     networks:
       - laravel-chat-app
 
@@ -81,11 +90,17 @@ services:
     environment:
       - APP_ENV=${APP_ENV}
       - CONTAINER_ROLE=queue
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - REDIS_HOST=${REDIS_HOST}
+      - REDIS_PORT=${REDIS_PORT}
     working_dir: /var/www
     volumes:
       - ./:/var/www
     depends_on:
       - php
+      - database
+      - redis
     networks:
       - laravel-chat-app
 
